tạo form đăng nhập đăng ký

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,2 +1,5 @@
 
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-login></app-login> -->
+<!-- <app-singup></app-singup> -->
+<!-- <app-boardpage></app-boardpage> -->
