--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -3,3 +3,4 @@
 <!-- <app-login></app-login> -->
 <!-- <app-singup></app-singup> -->
 <!-- <app-boardpage></app-boardpage> -->
+<app-profile></app-profile>
