--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -21,7 +21,11 @@
         <img width="200px" height="200px">
         <form style="width: 50%;left: 25%;position: relative;">
           <div class="form-group">
-            <input class="mt-3" style="margin-left: 100px;" type="file">
+            <input class="mt-3" style="margin-left: 100px;" type="file" id="file"
+            #userPhoto
+            (change)="onFileSelected($event)"
+            name="image"
+            autocomplete="off">
           </div>
           <div class="form-group">
             <label>Tên người dùng</label>
