--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -18,7 +18,7 @@
       <div id="property">
         <img width="100%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg">
         <h1 class="mt-3">Quản lý thông tin cá nhân của bạn</h1>
-        <img width="200px" height="200px">
+        <img width="200px" height="200px" [src]="fb">
         <form style="width: 50%;left: 25%;position: relative;">
           <div class="form-group">
             <input class="mt-3" style="margin-left: 100px;" type="file" id="file"
