--- a/front-end/src/app/core/homepage/navbar.component.html
+++ b/front-end/src/app/core/homepage/navbar.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="float-end">
                 <a id="navbar-login" class="btn text-white" href="">Đăng nhập</a>
-                <a id="navbar-sign" class="btn btn-sm bg-white" href="">Đăng ký</a>
+                <button id="navbar-sign" (click)="gotoSingup()"   class="btn btn-sm bg-white" href="">Đăng ký</button>
             </div>
         </nav>
     </header>
