--- a/front-end/src/app/singup/singup.component.html
+++ b/front-end/src/app/singup/singup.component.html
@@ -16,13 +16,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form name="singup" class="box">
+                    <form name="singup" class="box" (ngSubmit)="onSubmit()">
                         <h1>Đăng ký</h1>
                         <p class="text-muted"> Làm ơn nhập đầy đủ thông tin :(</p> 
-                        <input type="text" name="userName" required  placeholder="Tên người dùng "> 
-                        <input type="text" name="email" required  placeholder="Email"> 
-                        <input type="password" name="password" required  placeholder="Mật khẩu"> 
-                        <input type="text" name="phone" required  placeholder="Số điện thoại"> 
+                        <input type="text" [(ngModel)]="userName" name="userName" required  placeholder="Tên người dùng "> 
+                        <input type="email" [(ngModel)]="email" name="email" required  placeholder="Email"> 
+                        <input type="password" [(ngModel)]="password" name="password" required  placeholder="Mật khẩu"> 
+                        <input type="text" [(ngModel)]="phone" name="phone" required  placeholder="Số điện thoại"> 
                         <hr>
                         <input type="submit" name="" value="Đăng ký" href="#">
                         <div class="col-md-12">
