--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -17,13 +17,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form name="login" class="box">
+                    <form name="login" class="box" (ngSubmit)="getToken()">
                         <h1>Đăng nhập</h1>
                         <p class="text-muted"> Làm ơn nhập tài khoản và mật khẩu của bạn</p>
                         <input [(ngModel)]="email" type="text" name="email" required placeholder="Email">
                         <input [(ngModel)]="password" type="password" name="password" required placeholder="Mật khẩu">
                         <hr>
-                        <button (click)="getToken()">Đăng nhập</button>
+                        <input type="submit" value="Đăng nhập">
                         <div class="col-md-12">
                             <ul class="social-network social-circle">
                                 <li><a href="#" class="icoFacebook" title="Facebook"><i style="font-size:24px" class="fa">&#xf09a;</i></a></li>
@@ -31,7 +31,7 @@
                             </ul>
                         </div>
                         <hr>
-                        <a href="">Đăng ký </a>
+                        <input type='submit' style="color: white;" class="btn" value="Đăng ký " (click)="gotoSingup()">
                     </form>
                 </div>
             </div>
