--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -1,50 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div id="page-header">
-      <h1 style="padding-top: 50px;">name</h1>
-      <p>email</p>
+      <h1 style="padding-top: 50px">{{ user.name }}</h1>
+      <p>{{ user.email }}</p>
     </div>
+
     <div id="page-body">
       <div id="property">
-        <img width="100%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg">
+        <img
+          class="mt-5"
+          width="80%"
+          src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg"
+        />
         <h1 class="mt-3">Quản lý thông tin cá nhân của bạn</h1>
-        <img width="300px" height="300px" [src]="fb">
-        <form style="width: 50%;left: 25%;position: relative;">
+        <img width="200px" height="200px" [src]="user.image" />
+        <form
+          style="width: 50%; left: 25%; position: relative"
+          (ngSubmit)="updateUser()"
+        >
           <div class="form-group">
-            <input class="mt-3" style="margin-left: 100px;" type="file" id="file"
-            #userPhoto
-            (change)="onFileSelected($event)"
-            name="image"
-            autocomplete="off">
+            <input
+              class="mt-3"
+              style="margin-left: 100px"
+              type="file"
+              id="file"
+              #userPhoto
+              (change)="onFileSelected($event)"
+              name="image"
+              autocomplete="off"
+            />
           </div>
           <div class="form-group">
             <label>Tên người dùng</label>
-            <input class="form-control" type="text">
+            <input
+              class="form-control"
+              type="text"
+              required
+              [(ngModel)]="user.name"
+              id="name"
+              name="name"
+            />
           </div>
           <div class="form-group">
             <label>Phone</label>
-            <input class="form-control" type="text">
+            <input
+              class="form-control"
+              type="text"
+              [(ngModel)]="user.phone"
+              id="phone"
+              name="phone"
+            />
           </div>
           <div class="form-group">
-            <input class="form-control btn btn-success mt-3" type="submit" value="Lưu">
+            <input
+              class="form-control btn btn-success mt-3"
+              type="submit"
+              value="Lưu"
+            />
           </div>
         </form>
       </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
