--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -16,6 +16,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> -->
   </head>
   <body>
     <div id="page-header">
@@ -35,6 +37,7 @@
         <form
           style="width: 50%; left: 25%; position: relative"
           (ngSubmit)="updateUser()"
+          id="myForm"
         >
           <div class="form-group">
             <input
@@ -57,23 +60,42 @@
               [(ngModel)]="user.name"
               id="name"
               name="name"
+              #name="ngModel"
+              required
             />
+            <div [hidden]="name.valid || name.pristine" class="error">
+              <p>Không được để trống tên!</p>
+            </div>
           </div>
           <div class="form-group">
-            <label>Phone</label>
+            <label>Số điện thoại</label>
             <input
               class="form-control"
               type="text"
               [(ngModel)]="user.phone"
               id="phone"
               name="phone"
+              #phone="ngModel"
+              required
+              pattern="^[0-9]+[0-9]"
+              minlength="6"
+              [class.is-invalid]="phone.invalid && phone.touched"
             />
+            <div
+            *ngIf="phone.errors && (phone.valid || phone.touched)"
+            class="error"
+          >
+            <div *ngIf="phone.errors.required">Không được để trống số điện thoại!</div>
+            <div *ngIf="phone.errors.pattern">Số điện thoại phải là số !</div>
+            <div *ngIf="phone.errors.minlength">Số điện thoại quá ngắn !</div>
+          </div>
           </div>
           <div class="form-group">
             <input
               class="form-control btn btn-success mt-3"
               type="submit"
               value="Lưu"
+              [disabled]="name.invalid || phone.invalid"
             />
           </div>
         </form>
