--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!-- <router-outlet>
-</router-outlet> -->
-<app-profile></app-profile>
+<router-outlet>
+</router-outlet>
+<!-- <app-profile></app-profile> -->
