--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -12,25 +12,26 @@
 </head>
 
 <body>
-    <div id="page-header">
-        <h1 style="padding-top: 50px">{{ user.name }}</h1>
-        <p>{{ user.email }}</p>
-    </div>
 
     <div id="page-body">
         <div id="property">
             <img class="mt-5" width="80%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg" />
-            <h1 class="mt-3">Quản lý thông tin cá nhân của bạn</h1>
-            <img width="200px" height="200px" [src]="user.image" />
-            <form style="width: 50%; left: 25%; position: relative" (ngSubmit)="updateUser()">
+            <h1 class="mt-3">Đổi mật khẩu</h1>
+            <form style="width: 50%; left: 25%; position: relative">
                 <div class="form-group">
-                    <input class="mt-3" style="margin-left: 100px" type="file" id="file" #userPhoto (change)="onFileSelected($event)" name="image" autocomplete="off" />
-                </div>
-                <div class="form-group">
-                    <label>Tên người dùng</label>
-                    <input class="form-control" type="text" required [(ngModel)]="user.name" id="name" name="name" />
+                    <label>Mật khẩu hiện tại</label>
+                    <input [(ngModel)]="oldPassword" class="form-control" type="password" required id="name" name="name" />
                 </div>
 
+                <div class="form-group">
+                    <label>Mật khẩu mới</label>
+                    <input [(ngModel)]="newPassword" class="form-control" type="password" required id="name" name="name" />
+                </div>
+                <div class="form-group">
+                    <label>Nhập lại mật khẩu mới</label>
+                    <input [(ngModel)]="newPasswordConfirm" class="form-control" type="password" required id="name" name="name" />
+                </div>
+                <button class="btn btn-success" (click)="updatePassword()">Đổi mật khẩu</button>
                 <button class="btn btn-link" (click)="back()">Quay lại</button>
             </form>
         </div>
