--- a/front-end/src/app/core/boardpage/boardpage.component.html
+++ b/front-end/src/app/core/boardpage/boardpage.component.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header class="masthead">
 
       <div class="boards-menu">
     
-        <button class="boards-btn btn"><i class="fab fa-trello boards-btn-icon"></i>Boards</button>
+        <button class="boards-btn btn"><i style="font-size:24px" class="fa">&#xf181;</i> .Boards</button>
     
         <div class="board-search">
           <input type="search" class="board-search-input" aria-label="Board Search"> 
@@ -25,18 +26,11 @@
     
       <div class="logo">
     
-        <h1><i class="fab fa-trello logo-icon" aria-hidden="false"></i>SevenG</h1>
+        <h1><i style="font-size:24px" class="fa">&#xf181;</i>SevenG</h1>
     
       </div>
     
       <div class="user-settings">
-    
-        <button class="user-settings-btn btn" aria-label="Create">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-          </svg> 
-         </button>
-    
         <button class="user-settings-btn btn" aria-label="Notifications">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
             <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
@@ -75,85 +69,34 @@
     </section>
     <!-- End of board info bar -->
     
-    <!-- Lists container -->
-    <section class="lists-container">
-    
-      <div class="list">
-    
-        <h3 class="list-title">Tasks to Do</h3>
-    
-        <ul class="list-items">
-          <li>Complete mock-up for client website</li>
-          <li>Email mock-up to client for feedback</li>
-          <li>Update personal website header background image</li>
-          <li>Update personal website heading fonts</li>
-          <li>Add google map to personal website</li>
-          
-        </ul>
-    
-        <button class="add-card-btn btn">Add a card</button>
-    
-      </div>
-    
-      <div class="list">
-    
-        <h3 class="list-title">Completed Tasks</h3>
-    
-        <ul class="list-items">
-          <li>Clear email inbox</li>
-          <li>Finalise requirements for client web design</li>
-          <li>Begin work on mock-up for client website</li>
-        </ul>
-    
-        <button class="add-card-btn btn">Add a card</button>
-    
-      </div>
-    
-      <div class="list">
-    
-        <h3 class="list-title">Topics/Concepts to Revise</h3>
-    
-        <ul class="list-items">
-          <li>HTML Elements</li>
-          <li>HTML Form Validation</li>
-          <li>HTML Structured Data</li>
-          <li>Advanced CSS Selectors</li>
-          <li>CSS Transforms</li>
-          <li>CSS Animations</li>
-          <li>CSS Flexbox</li>
-          <li>CSS Grid</li>
-        </ul>
-    
-        <button class="add-card-btn btn">Add a card</button>
-    
-      </div>
-    
-    
-      <div class="list">
-    
-        <h3 class="list-title">Practise Website Ideas</h3>
-    
-        <ul class="list-items">
-          <li>Airsoft/Paintballing Centre</li>
-          <li>Bar/Pub</li>
-          <li>Bicycle Shop/Repair</li>
-          <li>Cafe/Coffee Shop</li>
-          <li>Car Showroom/Garage/Repair/Parts</li>
-          <li>Construction Company</li>
-        </ul>
-    
-        <button class="add-card-btn btn">Add a card</button>
-    
-      </div>
-    
-      <button class="add-list-btn btn">Add a list</button>
-    
-    </section>
+    <!-- Lists container -->      
+      <div cdkDropListGroup>
+        <div class="example-container">
+          <h2>To do</h2>
+          <div
+            cdkDropList
+            [cdkDropListData]="todo"
+            class="example-list"
+            (cdkDropListDropped)="drop($event)">
+            <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+          </div>
+        </div>
+        <div class="example-container">
+          <h2>Done</h2>
+          <div
+            cdkDropList
+            [cdkDropListData]="done"
+            class="example-list"
+            (cdkDropListDropped)="drop($event)">
+            <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+          </div>
+        </div>
+      </div>    
     <!-- End of lists container -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
   </body>
 </html>
