--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -47,7 +47,7 @@
             <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
           </svg>
         </button>
-            <a (click)="logOut()">Đăng xuất</a>
+            <a class="btn" (click)="logOut()">Đăng xuất</a>
 
         </div>
 
@@ -64,11 +64,6 @@
           <h2>Danh sách các bảng</h2>
         </button>
         </div>
-
-        <button class="menu-btn btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
-        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
-      </svg> Show Menu
-      </button>
 
     </section>
     <!-- End of board info bar -->
