--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -17,10 +17,10 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
-                    <form name="login" class="box" (ngSubmit)="getToken()">
+                    <form #login="ngForm"  name="login" class="box" (ngSubmit)="getToken()" novalidate>
                         <h1>Đăng nhập</h1>
                         <p class="text-muted"> Làm ơn nhập tài khoản và mật khẩu của bạn</p>
-                        <input [(ngModel)]="email" type="text" name="email" required placeholder="Email">
+                        <input [(ngModel)]="email" type="text" name="email" required email  placeholder="Email">
                         <input [(ngModel)]="password" type="password" name="password" required placeholder="Mật khẩu">
                         <hr>
                         <input type="submit" value="Đăng nhập">
