--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -25,7 +25,8 @@
 
                 <div class="form-group">
                     <label>Mật khẩu mới</label>
-                    <input [(ngModel)]="newPassword" class="form-control" type="password" required id="name" name="name" />
+                    <input [(ngModel)]="newPassword" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Please include at least 1 uppercase character, 1 lowercase character, and 1 number." required class="form-control" type="password" required id="name" name="name"
+                    />
                 </div>
                 <div class="form-group">
                     <label>Nhập lại mật khẩu mới</label>
