--- a/front-end/src/app/singup/singup.component.html
+++ b/front-end/src/app/singup/singup.component.html
@@ -1,74 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-                    <form #signup="ngForm" name="singup" class="box" (ngSubmit)="onSubmit()" novalidate>
-                        <h1>Đăng ký</h1>
-                        <p class="text-muted"> Làm ơn nhập đầy đủ thông tin :(</p>
-                        <div class="form-group">
-                            <input type="text" [(ngModel)]="user.name" name="userName" required #userName="ngModel" [class.is-invalid]="userName.invalid && userName.touched" placeholder="Tên người dùng ">
-                            <div *ngIf="userName.errors && (userName.valid || userName.touched)">
-                                <small class="text-danger" *ngIf="userName.errors.required">Tên người dùng không được để trống</small>
-                            </div>
+    <div style="text-align: center; color:#3399ff;"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-menu-button" viewBox="0 0 16 16">
+        <path d="M0 1.5A1.5 1.5 0 0 1 1.5 0h8A1.5 1.5 0 0 1 11 1.5v2A1.5 1.5 0 0 1 9.5 5h-8A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-8z"/>
+        <path d="M7.823 2.823l-.396-.396A.25.25 0 0 1 7.604 2h.792a.25.25 0 0 1 .177.427l-.396.396a.25.25 0 0 1-.354 0zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
+    </svg> <i style="font-size: 40px;"> SevenG </i></div>
+    <br>
+    <br>
+    <div class="row justify-content-center">
+        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 35rem;">
+            <div class="card-body">
+                <form (ngSubmit)="onSubmit()">
+                    <p style="text-align: center; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> <b> Đăng ký cho tài khoản của bạn </b></p>
+                    <br>
+                    <div class="mb-3">
+                        <input class="form-control" type="text" [(ngModel)]="user.name" name="userName" required #userName="ngModel" [class.is-invalid]="userName.invalid && userName.touched" placeholder="Tên người dùng ">
+                        <div *ngIf="userName.errors && (userName.valid || userName.touched)">
+                            <small class="text-danger" *ngIf="userName.errors.required">Tên người dùng không được để trống</small>
                         </div>
-                        <div class="form-group">
-                            <input type="email" [(ngModel)]="user.email" name="email" required email #email="ngModel" [class.is-invalid]="email.invalid && email.touched" placeholder="Email">
-                            <div *ngIf="email.errors && (email.valid || email.touched)">
-                                <small class="text-danger" *ngIf="email.errors.required">Email không được để trống</small>
-                                <small class="text-danger" *ngIf="email.errors.email">Email Phải đúng định dạng</small>
-                            </div>
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control" type="email" [(ngModel)]="user.email" name="email" required email #email="ngModel" [class.is-invalid]="email.invalid && email.touched" placeholder="Email">
+                        <div *ngIf="email.errors && (email.valid || email.touched)">
+                            <small class="text-danger" *ngIf="email.errors.required">Email không được để trống</small>
+                            <small class="text-danger" *ngIf="email.errors.email">Email Phải đúng định dạng</small>
                         </div>
-                        <div class="form-group">
-                            <input type="password" [(ngModel)]="user.password" name="password" required #password="ngModel" [class.is-invalid]="password.invalid && password.touched" placeholder="Mật khẩu">
-                            <div *ngIf="password.errors && (password.valid || password.touched)">
-                                <small class="text-danger" *ngIf="password.errors.required">Mật khẩu không được để trống</small>
-                            </div>
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control" type="password" [(ngModel)]="user.password" name="password" required #password="ngModel" [class.is-invalid]="password.invalid && password.touched" placeholder="Mật khẩu">
+                        <div *ngIf="password.errors && (password.valid || password.touched)">
+                            <small class="text-danger" *ngIf="password.errors.required">Mật khẩu không được để trống</small>
                         </div>
-                        <div class="form-group">
-                            <input type="text" [(ngModel)]="user.phone" name="phone" required pattern="^[0-9]+[0-9]" #phone="ngModel" [class.is-invalid]="phone.invalid && phone.touched" placeholder="Số điện thoại">
-                            <div *ngIf="phone.errors && (phone.valid || phone.touched)">
-                                <small class="text-danger" *ngIf="phone.errors.required">Số điện thoại không được để trống</small>
-                                <small class="text-danger" *ngIf="phone.errors.pattern">Số điện thoại phải là số</small>
-                            </div>
+                    </div>
+                    <div class="mb-3">
+                        <input class="form-control" type="text" [(ngModel)]="user.phone" name="phone" required pattern="^[0-9]+[0-9]" #phone="ngModel" [class.is-invalid]="phone.invalid && phone.touched" placeholder="Số điện thoại">
+                        <div *ngIf="phone.errors && (phone.valid || phone.touched)">
+                            <small class="text-danger" *ngIf="phone.errors.required">Số điện thoại không được để trống</small>
+                            <small class="text-danger" *ngIf="phone.errors.pattern">Số điện thoại không hợp lệ</small>
                         </div>
-                        <hr>
-                        <input type="submit" name="" [disabled]="signup.form.invalid" value="Đăng ký">
-                        <div class="col-md-12">
-                            <ul class="social-network social-circle">
-                                <li><a href="#" class="icoFacebook" title="Facebook"><i style="font-size:24px" class="fa">&#xf09a;</i></a></li>
-                                <li><a href="#" class="icoGoogle" title="Google +"><i style="font-size:24px" class="fa">&#xf1a0;</i></a></li>
-                            </ul>
-                        </div>
-                        <hr>
-                        <input type='submit' style="color: white;" class="btn" value="Đăng nhập " (click)="gotoLogin()">
-                        <a class="btn btn-link" (click)="gobackHomePage()">Quay lại trang chủ</a>
-
-                    </form>
-                </div>
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="buttonSign btn btn-success ">Đăng ký tài khoản</button>
+                    </div>
+                    <hr>
+                    <div style="text-align: center;" class="mb-3">
+                        <a (click)="gotoLogin()" class="btn btn-link">Bạn có tài khoản? Đăng nhập</a> <a class="btn btn-link" (click)="gobackHomePage()">Trở về trang chủ</a>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </body>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
 </html>
