--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -26,6 +26,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #0079bf;
+    background-image: url('https://images.template.net/wp-content/uploads/2016/12/14111555/pp2.jpg');
 }
 
 .btn {
@@ -69,6 +70,7 @@ body {
 .boards-menu {
     display: flex;
     flex-shrink: 0;
+    
 }
 
 .boards-btn {
@@ -160,11 +162,14 @@ body {
     justify-content: space-between;
     margin: 0.8rem 0;
     padding: 0 1rem;
-    color: #f6f6f6;
+    color: #4d4d4d;
+    background-color: rgba(255,255,255,0.5);
+
 }
 
 .board-controls {
     display: flex;
+    
 }
 
 .board-controls .btn {
@@ -386,7 +391,8 @@ Remove or comment-out the code block below to see how the browser will fall-back
   width: 100%;
   height: 160px;
   left: 30px;
-  background-color: greenyellow;
+  background-color: rgba(255,255,255,0.5);
+  border-color: teal;
 }
 
 .my-board{
@@ -394,8 +400,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
   width: 200px;
   height: 100px;
   float: left;
-  background-color: ivory;
+  background-color: transparent;
   border-radius: 10px;
+  margin-right: 20px;
 }
 
 .add-board-button{
@@ -403,4 +410,20 @@ Remove or comment-out the code block below to see how the browser will fall-back
   width: 200px;
   height: 100px;
   border-radius: 10px;
+  background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat;
+
+
 }
+
+.add-board-button2{
+    margin-left: 10px;
+    width: 200px;
+    height: 100px;
+    border-radius: 10px;
+  
+  
+  }
+
+  .group-header{
+      text-align: left;
+  }
