--- a/front-end/src/app/password/password.component.css
+++ b/front-end/src/app/password/password.component.css
@@ -21,3 +21,12 @@
     padding: 12px;
     color: red;
 }
+p {
+    font-family: Lato;
+  }
+  .error-message {
+    color: red;
+  }
+  input.ng-touched.ng-invalid {
+    border: 1px solid red;
+  }
