--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -104,7 +104,7 @@
               </svg>
               Thành viên ( {{ group.total[0].total }} )
             </button>
-            <button *ngIf="group.group.user_id == user_id" class="buttonn">
+            <button (click)="viewGroup(group.group.id)" *ngIf="group.group.user_id == user_id" class="buttonn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
