added service and ts task

--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -28,7 +28,7 @@
   width: 200px;
   height: 100px;
   border-radius: 10px;
-  background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat;
+  /* background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat; */
 
 
 }
