--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -23,10 +23,17 @@
                     <br>
                     <br>
                     <div class="mb-3">
-                        <input [(ngModel)]="email" name="email" required type="text" class="form-control" placeholder="Nhập email">
+                        <input [(ngModel)]="email" name="email" required email type="text" class="form-control" #emails='ngModel' [class.is-invalid]="emails.invalid && emails.touched"  placeholder="Nhập email">
+                        <div *ngIf="emails.errors && (emails.valid || emails.touched)">
+                            <small class="text-danger" *ngIf="emails.errors.required">Email không được để trống</small>
+                            <small class="text-danger" *ngIf="emails.errors.email">Email phải nhập đúng định dạng</small>
+                        </div>
                     </div>
                     <div class="mb-3">
-                        <input [(ngModel)]="password" name="password" required type="password" required class="form-control" placeholder="Nhập mật khẩu">
+                        <input [(ngModel)]="password" name="password" required type="password" required #pass='ngModel' [class.is-invalid]="pass.invalid && pass.touched" class="form-control" placeholder="Nhập mật khẩu">
+                        <div *ngIf="pass.errors && (pass.valid || pass.touched)">
+                            <small class="text-danger" *ngIf="pass.errors.required">Mật khẩu không được để trống</small>
+                        </div>
                     </div>
                     <div style="text-align: center;" class="mb-3">
                         <button type="submit" class="loginButton btn btn-success " [disabled]="login.form.invalid">Đăng nhập</button>
