--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <button
-        class="navbar-toggler"  
+        class="navbar-toggler"
         type="button"
         data-toggle="collapse"
         data-target="#navbarTogglerDemo03"
@@ -80,6 +80,14 @@
         <button class="board-title btn">
           <h2>Danh sách các bảng</h2>
         </button>
+        <div class="container" style="width: 300px;">
+          <form (ngSubmit)="createGroup()">
+            <input  type="text" name="name" [(ngModel)]="group.name" class="form-control">
+            <button type="submit" class="btn btn-success form-control">
+              Tạo nhóm mới
+            </button>
+          </form>
+        </div>
       </div>
     </section>
     <div class="container">
