--- a/front-end/src/app/core/tasklist/tasklist.component.css
+++ b/front-end/src/app/core/tasklist/tasklist.component.css
@@ -449,4 +449,10 @@ Remove or comment-out the code block below to see how the browser will fall-back
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+  #avatar {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    background-size: cover;
+}
   
