chinh sua lai giao dien trang dsach board

--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -96,7 +96,7 @@
                     </div>
                 </section>
                 <div class="container mt-3">
-                    <div *ngFor="let group of groups" class="my-group mt-3">
+                    <div style="width: 83%;" *ngFor="let group of groups" class="my-group mt-3 shadow p-2 mb-2 rounded">
                         <div class="group-header row">
                             <div *ngIf="group.group.name === 'Bảng cá nhân'">
                                 <div class="col md-5">
