--- a/front-end/src/app/password/password.component.css
+++ b/front-end/src/app/password/password.component.css
@@ -21,12 +21,29 @@
     padding: 12px;
     color: red;
 }
+
 p {
     font-family: Lato;
-  }
-  .error-message {
+}
+
+.error-message {
     color: red;
-  }
-  input.ng-touched.ng-invalid {
+}
+
+input.ng-touched.ng-invalid {
     border: 1px solid red;
-  }
+}
+
+.navbar {
+    background-color: #3399ff;
+}
+
+.navbar-brand {
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif!important;
+    color: white !important;
+}
+
+.navbar-brand:hover {
+    color: grey!important;
+}
