--- a/front-end/src/app/core/profile/profile/profile.component.html
+++ b/front-end/src/app/core/profile/profile/profile.component.html
@@ -13,21 +13,30 @@
 </head>
 
 <body>
-    <h1 class="mt-5" style="text-align: center; font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Hồ sơ cá nhân</h1>
-    <br>
-    <form (ngSubmit)="updateUser()" #profile="ngForm">
-        <div class="container mt-5">
-            <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+    <header>
+        <nav class="navbar py-3 shadow p-3 mb-5">
+            <div class="float-start">
+                <a class="navbar-brand" href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="28" fill="currentColor" class="bi bi-menu-button" viewBox="0 0 16 16">
+                    <path d="M0 1.5A1.5 1.5 0 0 1 1.5 0h8A1.5 1.5 0 0 1 11 1.5v2A1.5 1.5 0 0 1 9.5 5h-8A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-8z"/>
+                    <path d="M7.823 2.823l-.396-.396A.25.25 0 0 1 7.604 2h.792a.25.25 0 0 1 .177.427l-.396.396a.25.25 0 0 1-.354 0zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
+                </svg> <i> SevenG </i></a>
+            </div>
+        </nav>
+    </header>
+    <div>
+        <h1 class="mt-5" style="text-align: center; font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Hồ sơ cá nhân</h1>
+        <br>
+        <form (ngSubmit)="updateUser()" #profile="ngForm">
+            <div class="container mt-5">
                 <div class="row justify-content-center mt-5">
                     <div style="text-align: center; width: 400px;" class="col-7">
-                        <img style="border-radius: 50%;" width="300px" height="300px" [src]="user.image" />
+                        <img style="border-radius: 50%;" width="200px" height="200px" [src]="user.image" />
                         <div class="mt-3">
                             <input style="left: 70px; position: relative;" type="file" id="file" #userPhoto (change)="onFileSelected($event)" name="image" autocomplete="off" />
                         </div>
                     </div>
                     <div class="col-5">
                         <div style="width: 400px;">
-                            <h1 style="text-align: center;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">Thông tin</h1>
                             <div class=" mb-3 ">
                                 <label>Tên người dùng</label>
                                 <input class="form-control" type="text" required #name='ngModel' [class.is-invalid]="name.invalid && name.touched" [(ngModel)]="user.name" id="name" name="name" />
@@ -66,8 +75,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
