fix giao dien trang dsach board

--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -115,7 +115,7 @@
                                     </svg> {{ group.group.name }}</h2>
                                             </div>
                                             <div class="col-4">
-                                                <button class="buttonn mr-4">
+                                                <button style="background-color: lightgray;" class="buttonn mr-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -133,7 +133,7 @@
                                             </div>
                                             <div class="col-1">
 
-                                                <button (click)="viewGroup(group.group.id)" *ngIf="group.group.user_id == user_id" class="buttonn">
+                                                <button style="background-color: lightgray;" (click)="viewGroup(group.group.id)" *ngIf="group.group.user_id == user_id" class="buttonn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
