drag drop front end

--- a/front-end/src/app/core/group-detail/group-detail.component.html
+++ b/front-end/src/app/core/group-detail/group-detail.component.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" (click)='combackBoardList()'><svg
+                    <a class="nav-link"><svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="25"
                 height="25"
