--- a/front-end/src/app/password/password.component.css
+++ b/front-end/src/app/password/password.component.css
@@ -30,10 +30,6 @@ p {
     color: red;
 }
 
-input.ng-touched.ng-invalid {
-    border: 1px solid red;
-}
-
 .navbar {
     background-color: #3399ff;
 }
@@ -47,3 +43,12 @@ input.ng-touched.ng-invalid {
 .navbar-brand:hover {
     color: grey!important;
 }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
