--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -52,28 +52,39 @@
             <img class="mt-5" width="80%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg" />
             <h1 class="mt-3">Đổi mật khẩu</h1>
             <form style="width: 50%; left: 25%; position: relative" #pass="ngForm">
-                <div class="form-group">
-                    <label>Mật khẩu hiện tại</label>
-                    <input [(ngModel)]="oldPassword" class="form-control" type="password" required #oldPass="ngModel" [class.is-invalid]="oldPass.invalid && oldPass.touched" id="name" name="oldPass" />
+                <div class="mb-3">
+                    <mat-form-field class="example-full-width">
+                    <input matInput [type]="hide ? 'password' : 'text'" type="password" [(ngModel)]="oldPassword" name="oldPass" required  #oldPass="ngModel" [class.is-invalid]="oldPass.invalid && oldPass.touched" placeholder="Nhập mật khẩu cũ">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
                     <div *ngIf="oldPass.errors && (oldPass.valid || oldPass.touched)">
                         <small class="text-danger" *ngIf="oldPass.errors.required">Mật khẩu cũ không được để trống</small>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <label>Mật khẩu mới</label>
-                    <input [(ngModel)]="newPassword" title="Please include at least 1 uppercase character, 1 lowercase character, and 1 number." required pattern="[\w]+[\w]{5,}" #newPass="ngModel" [class.is-invalid]="newPass.invalid && newPass.touched" class="form-control"
-                        type="password" required id="name" name="newPass" />
+                <div class="mb-3">
+                    <mat-form-field class="example-full-width">
+                    <input matInput [type]="hide2 ? 'password' : 'text'" type="password" [(ngModel)]="newPassword" name="newPass" required pattern="[\w]+[\w]{5,}" #newPass="ngModel" [class.is-invalid]="newPass.invalid && newPass.touched" placeholder="Nhập mật khẩu mới">
+                    <button mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
                     <div *ngIf="newPass.errors && (newPass.valid || newPass.touched)">
                         <small class="text-danger" *ngIf="newPass.errors.required">Mật khẩu mới không được để trống</small>
                         <small class="text-danger" *ngIf="newPass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label>Nhập lại mật khẩu mới</label>
-                    <input [(ngModel)]="newPasswordConfirm" class="form-control" type="password" required #newPassAgain="ngModel" [class.is-invalid]="newPassAgain.invalid && newPassAgain.touched" id="name" name="newPassAgain" />
+                <div class="mb-3">
+                    <mat-form-field class="example-full-width">
+                    <input matInput [type]="hide3 ? 'password' : 'text'" type="password" [(ngModel)]="newPasswordConfirm" name="passConfirm" required  #newPassAgain="ngModel" [class.is-invalid]="newPassAgain.invalid && newPassAgain.touched" placeholder="Nhập lại mật khẩu mới">
+                    <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                    </mat-form-field>
                     <div *ngIf="newPassAgain.errors && (newPassAgain.valid || newPassAgain.touched)">
                         <small class="text-danger" *ngIf="newPassAgain.errors.required">Mật khẩu mới không được để trống</small>
+                        <small class="text-danger" *ngIf="newPassAgain.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
                     </div>
                     <div *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">
                         <small class="text-danger" *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">Mật khẩu không khớp </small>
