--- a/front-end/src/app/singup/singup.component.css
+++ b/front-end/src/app/singup/singup.component.css
@@ -7,5 +7,16 @@
 }
 
 body {
-    background-color: whitesmoke;
+    background-color: white;
 }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  
+  
