--- a/front-end/src/app/login/login.component.css
+++ b/front-end/src/app/login/login.component.css
@@ -9,5 +9,14 @@
 body {
     background-color: whitesmoke;
 }
-
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+  
   
