--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -45,7 +45,26 @@
               <span class="sr-only">(current)</span></a
             >
           </li>
+          <!-- <li >
+          <ng-autocomplete
+            [data]="countries"
+            [searchKeyword]="keyword"
+            placeholder="Tìm kiếm"
+            historyIdentifier="countries"
+            [itemTemplate]="itemTemplate"
+            [notFoundTemplate]="notFoundTemplate">
+          </ng-autocomplete>
+        
+          <ng-template  #itemTemplate let-item>
+            <a [innerHTML]="item.name"></a>
+          </ng-template>
+        
+          <ng-template  #notFoundTemplate let-notFound>
+            <div [innerHTML]="notFound"></div>
+          </ng-template>
+          </li> -->
         </ul>
+          </div>
           <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
           id="avatar"
           style="background-image: url({{user.image}});"
@@ -56,7 +75,6 @@
                         <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
                         <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
                     </mat-menu>
-        </div>
     </nav>
 
     <!-- Board info bar -->
@@ -193,3 +211,4 @@
 </body>
 
 </html>
+
