--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -23,10 +23,11 @@
   overflow: hidden;
   display: block;
   padding: 5px;
+  position: relative;
 }
 
-.my-task.cdk-drop-list-dragging .my-task:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+.my-column.cdk-drop-list-dragging .my-task:not(.cdk-drag-placeholder) {
+  transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .title{
