set background for board

--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -85,7 +85,7 @@
 .board-button {
     float: right;
     border: 0px rgb(2, 129, 80);
-    background-color: rgb(2, 129, 80);
+    background-color: transparent;
     color: white;
 }
 
