--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                         <div class="group-body">
-                            <div style="height: 80px;" *ngFor="let board of group.boards" class="my-board mt-3 shadow p-2 mb-2 rounded">
+                            <div style="height: 80px;background-image: url({{board.background}});background-size: cover;" *ngFor="let board of group.boards" class="my-board mt-3 shadow p-2 mb-2 rounded">
                                 <h3 style="text-align: left;float: left;width: 120px;">{{ board.name }}</h3>
                                 <button class="board-button" (click)="openDialog(board.id)"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
